--- a/pom.xml
+++ b/pom.xml
@@ -304,6 +304,12 @@
       <version>7.0.0</version>
     </dependency>
     <dependency>
+      <groupId>org.elasticsearch.test</groupId>
+      <artifactId>framework</artifactId>
+      <version>5.6.4</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.tukaani</groupId>
       <artifactId>xz</artifactId>
       <version>1.5</version>
