Fetch upstream and fix conflicts

--- a/pom.xml
+++ b/pom.xml
@@ -427,5 +427,10 @@
       <artifactId>lucene-analyzers-kuromoji</artifactId>
       <version>${lucene.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.tika</groupId>
+      <artifactId>tika-core</artifactId>
+      <version>1.24.1</version>
+    </dependency>
   </dependencies>
 </project>
