--- a/src/main/resources/regression/cacm.yaml
+++ b/src/main/resources/regression/cacm.yaml
@@ -25,7 +25,7 @@ index_options:
   - -optimize
 topic_reader: Cacm
 evals:
-  - command: eval/trec_eval.9.0.4/trec_eval
+  - command: tools/eval/trec_eval.9.0.4/trec_eval
     params:
       - -m map
     separator: "\t"
@@ -33,7 +33,7 @@ evals:
     metric: map
     metric_precision: 4
     can_combine: true
-  - command: eval/trec_eval.9.0.4/trec_eval
+  - command: tools/eval/trec_eval.9.0.4/trec_eval
     params:
       - -m P.30
     separator: "\t"
