--- a/src/main/resources/regression/car17v1.5.yaml
+++ b/src/main/resources/regression/car17v1.5.yaml
@@ -29,7 +29,7 @@ topics:
     path: topics.car17v1.5.benchmarkY1test.txt
     qrel: qrels.car17v1.5.benchmarkY1test.txt
 evals:
-  - command: eval/trec_eval.9.0.4/trec_eval
+  - command: tools/eval/trec_eval.9.0.4/trec_eval
     params:
       - -m map
     separator: "\t"
@@ -37,7 +37,7 @@ evals:
     metric: map
     metric_precision: 4
     can_combine: true
-  - command: eval/trec_eval.9.0.4/trec_eval
+  - command: tools/eval/trec_eval.9.0.4/trec_eval
     params:
       - -m recip_rank
     separator: "\t"
