--- a/src/main/resources/regression/car17v2.0-doc2query.yaml
+++ b/src/main/resources/regression/car17v2.0-doc2query.yaml
@@ -29,7 +29,7 @@ topics:
     path: topics.car17v2.0.benchmarkY1test.txt
     qrel: qrels.car17v2.0.benchmarkY1test.txt
 evals:
-  - command: eval/trec_eval.9.0.4/trec_eval
+  - command: tools/eval/trec_eval.9.0.4/trec_eval
     params:
       - -c -m map  # -c: average over all queries in qrels - this is critical here
     separator: "\t"
@@ -37,7 +37,7 @@ evals:
     metric: map
     metric_precision: 4
     can_combine: true
-  - command: eval/trec_eval.9.0.4/trec_eval
+  - command: tools/eval/trec_eval.9.0.4/trec_eval
     params:
       - -c -m recip_rank
     separator: "\t"
