--- a/src/main/resources/regression/disk12.yaml
+++ b/src/main/resources/regression/disk12.yaml
@@ -15,7 +15,7 @@ index_options:
   - -storeRaw
 topic_reader: Trec
 evals:
-  - command: eval/trec_eval.9.0.4/trec_eval
+  - command: tools/eval/trec_eval.9.0.4/trec_eval
     params:
       - -m map
     separator: "\t"
@@ -23,7 +23,7 @@ evals:
     metric: map
     metric_precision: 4
     can_combine: true
-  - command: eval/trec_eval.9.0.4/trec_eval
+  - command: tools/eval/trec_eval.9.0.4/trec_eval
     params:
       - -m P.30
     separator: "\t"
