--- a/src/main/resources/regression/dl19-passage.yaml
+++ b/src/main/resources/regression/dl19-passage.yaml
@@ -16,7 +16,7 @@ index_options:
   - -storeRaw
 topic_reader: TsvInt
 evals:
-  - command: eval/trec_eval.9.0.4/trec_eval
+  - command: tools/eval/trec_eval.9.0.4/trec_eval
     params:
       - -m map
       - -c
@@ -25,7 +25,7 @@ evals:
     metric: map
     metric_precision: 4
     can_combine: true
-  - command: eval/trec_eval.9.0.4/trec_eval
+  - command: tools/eval/trec_eval.9.0.4/trec_eval
     params:
       - -m ndcg_cut.10
       - -c
@@ -34,7 +34,7 @@ evals:
     metric: NDCG@10
     metric_precision: 4
     can_combine: true
-  - command: eval/trec_eval.9.0.4/trec_eval
+  - command: tools/eval/trec_eval.9.0.4/trec_eval
     params:
       - -m recip_rank
       - -c
@@ -43,7 +43,7 @@ evals:
     metric: RR
     metric_precision: 4
     can_combine: true
-  - command: eval/trec_eval.9.0.4/trec_eval
+  - command: tools/eval/trec_eval.9.0.4/trec_eval
     params:
       - -m recall.100
       - -c
@@ -52,7 +52,7 @@ evals:
     metric: R@100
     metric_precision: 4
     can_combine: true
-  - command: eval/trec_eval.9.0.4/trec_eval
+  - command: tools/eval/trec_eval.9.0.4/trec_eval
     params:
       - -m recall.1000
       - -c
