--- a/src/main/resources/regression/fire12-hi.yaml
+++ b/src/main/resources/regression/fire12-hi.yaml
@@ -19,7 +19,7 @@ search_options:
   - -language hi
 topic_reader: Trec
 evals:
-  - command: eval/trec_eval.9.0.4/trec_eval
+  - command: tools/eval/trec_eval.9.0.4/trec_eval
     params:
       - -m map
     separator: "\t"
@@ -27,7 +27,7 @@ evals:
     metric: map
     metric_precision: 4
     can_combine: true
-  - command: eval/trec_eval.9.0.4/trec_eval
+  - command: tools/eval/trec_eval.9.0.4/trec_eval
     params:
       - -m P.20
     separator: "\t"
@@ -35,7 +35,7 @@ evals:
     metric: p20
     metric_precision: 4
     can_combine: true
-  - command: eval/trec_eval.9.0.4/trec_eval
+  - command: tools/eval/trec_eval.9.0.4/trec_eval
     params:
       - -m ndcg_cut.20
     separator: "\t"
