--- a/src/main/resources/regression/mb13.yaml
+++ b/src/main/resources/regression/mb13.yaml
@@ -37,7 +37,7 @@ topics:
     path: topics.microblog2014.txt
     qrel: qrels.microblog2014.txt
 evals:
-  - command: eval/trec_eval.9.0.4/trec_eval
+  - command: tools/eval/trec_eval.9.0.4/trec_eval
     params:
       - -m map
     separator: "\t"
@@ -45,7 +45,7 @@ evals:
     metric: map
     metric_precision: 4
     can_combine: true
-  - command: eval/trec_eval.9.0.4/trec_eval
+  - command: tools/eval/trec_eval.9.0.4/trec_eval
     params:
       - -m P.30
     separator: "\t"
