--- a/src/main/resources/regression/msmarco-passage-doc2query.yaml
+++ b/src/main/resources/regression/msmarco-passage-doc2query.yaml
@@ -16,7 +16,7 @@ index_options:
   - -storeRaw
 topic_reader: TsvInt
 evals:
-  - command: eval/trec_eval.9.0.4/trec_eval
+  - command: tools/eval/trec_eval.9.0.4/trec_eval
     params:
       - -m map
       - -c
@@ -25,7 +25,7 @@ evals:
     metric: map
     metric_precision: 4
     can_combine: true
-  - command: eval/trec_eval.9.0.4/trec_eval
+  - command: tools/eval/trec_eval.9.0.4/trec_eval
     params:
       - -m recall.1000
       - -c
