--- a/src/main/resources/regression/ntcir8-zh.yaml
+++ b/src/main/resources/regression/ntcir8-zh.yaml
@@ -21,7 +21,7 @@ search_options:
   - -language zh
 topic_reader: TsvString
 evals:
-  - command: eval/trec_eval.9.0.4/trec_eval
+  - command: tools/eval/trec_eval.9.0.4/trec_eval
     params:
       - -m map
     separator: "\t"
@@ -29,7 +29,7 @@ evals:
     metric: map
     metric_precision: 4
     can_combine: true
-  - command: eval/trec_eval.9.0.4/trec_eval
+  - command: tools/eval/trec_eval.9.0.4/trec_eval
     params:
       - -m P.20
     separator: "\t"
@@ -37,7 +37,7 @@ evals:
     metric: p20
     metric_precision: 4
     can_combine: true
-  - command: eval/trec_eval.9.0.4/trec_eval
+  - command: tools/eval/trec_eval.9.0.4/trec_eval
     params:
       - -m ndcg_cut.20
     separator: "\t"
