--- a/src/main/resources/docgen/templates/dl20-doc-docTTTTTquery-per-doc.template
+++ b/src/main/resources/docgen/templates/dl20-doc-docTTTTTquery-per-doc.template
@@ -1,6 +1,8 @@
-# Anserini: Regressions for [DL19 (Document)](https://trec.nist.gov/data/deep2019.html)
+# Anserini: Regressions for [DL20 (Document)](https://trec.nist.gov/data/deep2020.html) w/ per-doc docTTTTTquery
 
-This page describes experiments, integrated into Anserini's regression testing framework, for the TREC 2019 Deep Learning Track (Document Ranking Task) on the MS MARCO document collection using relevance judgments from NIST.
+This page describes document expansion experiments, integrated into Anserini's regression testing framework, for the TREC 2020 Deep Learning Track (Passage Ranking Task) on the MS MARCO passage collection using relevance judgments from NIST.
+These experimental runs take advantage of [docTTTTTquery](http://doc2query.ai/) expansions on a _per-document_ basis.
+
 Note that the NIST relevance judgments provide far more relevant documents per topic, unlike the "sparse" judgments provided by Microsoft (these are sometimes called "dense" judgments to emphasize this contrast).
 For additional instructions on working with MS MARCO document collection, refer to [this page](experiments-msmarco-doc.md).
 
@@ -42,6 +44,3 @@ ${eval_cmds}
 With the above commands, you should be able to replicate the following results:
 
 ${effectiveness}
-
-The setting "default" refers the default BM25 settings of `k1=0.9`, `b=0.4`, while "tuned" refers to the tuned setting of `k1=3.44`, `b=0.87` (see [this page](experiments-msmarco-doc.md) for more details about tuning).
-
