--- a/src/main/resources/regression/msmarco-doc-docTTTTTquery-per-passage.yaml
+++ b/src/main/resources/regression/msmarco-doc-docTTTTTquery-per-passage.yaml
@@ -27,6 +27,15 @@ evals:
     can_combine: true
   - command: tools/eval/trec_eval.9.0.4/trec_eval
     params:
+      - -m recall.100
+      - -c
+    separator: "\t"
+    parse_index: 2
+    metric: R@100
+    metric_precision: 4
+    can_combine: true
+  - command: tools/eval/trec_eval.9.0.4/trec_eval
+    params:
       - -m recall.1000
       - -c
     separator: "\t"
@@ -56,5 +65,21 @@ models:
     results:
       map:
         - 0.3182
+      R@100:
+        - 0.8481
       R@1000:
         - 0.9490
+  - name: bm25-tuned
+    display: BM25 (Tuned)
+    params:
+      - -bm25
+      - -bm25.k1 2.56
+      - -bm25.b 0.59
+      - -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+    results:
+      map:
+        - 0.3211
+      R@100:
+        - 0.8627
+      R@1000:
+        - 0.9530
