--- a/src/main/resources/docgen/templates/clef06-fr.template
+++ b/src/main/resources/docgen/templates/clef06-fr.template
@@ -15,7 +15,7 @@ ${index_cmds}
 ```
 
 The collection comprises news articles from ATS (SDA) and Le Monde totaling 177,452 documents.
-Since the original distribution is in a format that's slightly different from standard TREC collections, we used a [preprocessing script](../src/main/python/clir/document_preprocess.py) to convert the collection into Anserini's JSON line format (we also applied a bit of light data cleaning using a script that has been lost; if you have problems replicating our results, get in touch directly).
+Since the original distribution is in a format that's slightly different from standard TREC collections, we used a [preprocessing script](../src/main/python/clir/document_preprocess.py) to convert the collection into Anserini's JSON line format (we also applied a bit of light data cleaning using a script that has been lost; if you have problems reproducing our results, get in touch directly).
 The directory `/path/to/clef06-fr/` should point to the location of the processed collection.
 
 For additional details, see explanation of [common indexing options](common-indexing-options.md).
@@ -41,6 +41,6 @@ ${eval_cmds}
 
 ## Effectiveness
 
-With the above commands, you should be able to replicate the following results:
+With the above commands, you should be able to reproduce the following results:
 
 ${effectiveness}
