--- a/src/main/resources/docgen/templates/gov2.template
+++ b/src/main/resources/docgen/templates/gov2.template
@@ -41,6 +41,6 @@ ${eval_cmds}
 
 ## Effectiveness
 
-With the above commands, you should be able to replicate the following results:
+With the above commands, you should be able to reproduce the following results:
 
 ${effectiveness}
