--- a/src/main/resources/docgen/templates/mb13.template
+++ b/src/main/resources/docgen/templates/mb13.template
@@ -47,6 +47,6 @@ ${eval_cmds}
 
 ## Effectiveness
 
-With the above commands, you should be able to replicate the following results:
+With the above commands, you should be able to reproduce the following results:
 
 ${effectiveness}
