--- a/src/main/resources/regression/dl19-passage-docTTTTTquery.yaml
+++ b/src/main/resources/regression/dl19-passage-docTTTTTquery.yaml
@@ -1,5 +1,5 @@
 ---
-name: msmarco-doc-docTTTTTquery-per-doc
+name: msmarco-passage # Note, this is the name of the collection; this way we can share index with the msmarco regressions
 index_command: target/appassembler/bin/IndexCollection
 index_utils_command: target/appassembler/bin/IndexReaderUtils
 search_command: target/appassembler/bin/SearchCollection
@@ -9,7 +9,7 @@ index_root:
 ranking_root:
 collection: JsonCollection
 generator: DefaultLuceneDocumentGenerator
-threads: 1
+threads: 9
 index_options:
   - -storePositions
   - -storeDocvectors
@@ -20,11 +20,22 @@ evals:
     params:
       - -m map
       - -c
+      - -l 2
     separator: "\t"
     parse_index: 2
     metric: map
     metric_precision: 4
-    can_combine: true
+    can_combine: false
+  - command: tools/eval/trec_eval.9.0.4/trec_eval
+    params:
+      - -m recall.1000
+      - -c
+      - -l 2
+    separator: "\t"
+    parse_index: 2
+    metric: R@1000
+    metric_precision: 4
+    can_combine: false
   - command: tools/eval/trec_eval.9.0.4/trec_eval
     params:
       - -m ndcg_cut.10
@@ -33,99 +44,69 @@ evals:
     parse_index: 2
     metric: NDCG@10
     metric_precision: 4
-    can_combine: true
-  - command: tools/eval/trec_eval.9.0.4/trec_eval
-    params:
-      - -m recip_rank
-      - -c
-    separator: "\t"
-    parse_index: 2
-    metric: RR
-    metric_precision: 4
-    can_combine: true
-  - command: tools/eval/trec_eval.9.0.4/trec_eval
-    params:
-      - -m recall.100
-      - -c
-    separator: "\t"
-    parse_index: 2
-    metric: R@100
-    metric_precision: 4
-    can_combine: true
+    can_combine: false
 input_roots:
   - /tuna1/      # on tuna
   - /store/      # on orca
   - /scratch2/   # on damiano
-input: collections/msmarco/doc-docTTTTTquery-per-doc
-index_path: indexes/lucene-index.msmarco-doc-docTTTTTquery-per-doc.pos+docvectors+raw
+input: collections/msmarco/passage-docTTTTTquery
+index_path: indexes/lucene-index.msmarco-passage-docTTTTTquery.pos+docvectors+raw
 index_stats:
-  documents: 3213834
-  documents (non-empty): 3213834
-  total terms: 3748332076
+  documents: 8841823
+  documents (non-empty): 8841823
+  total terms: 1986612263
 topics:
-  - name: "[DL20 (Doc)](https://trec.nist.gov/data/deep2020.html)"
-    path: topics.dl20.txt
-    qrel: qrels.dl20-doc.txt
+  - name: "[DL19 (Passage)](https://trec.nist.gov/data/deep2019.html)"
+    path: topics.dl19-passage.txt
+    qrel: qrels.dl19-passage.txt
 models:
   - name: bm25-default
     display: BM25 (Default)
     params:
       - -bm25
-      - -hits 100  # Note, this is different DL 2020 passage ranking!
     results:
       map:
-        - 0.4230
+        - 0.4034
       NDCG@10:
-        - 0.5885
-      RR:
-        - 0.9369
-      R@100:
-        - 0.6412
+        - 0.6417
+      R@1000:
+        - 0.8310
   - name: bm25-default+rm3
     display: +RM3
     params:
       - -bm25
       - -rm3
-      - -hits 100  # Note, this is different DL 2020 passage ranking!
     results:
       map:
-        - 0.4228
+        - 0.4485
       NDCG@10:
-        - 0.5407
-      RR:
-        - 0.8147
-      R@100:
-        - 0.6555
+        - 0.6548
+      R@1000:
+        - 0.8861
   - name: bm25-tuned
     display: BM25 (Tuned)
     params:
       - -bm25
-      - -bm25.k1 3.44
-      - -bm25.b 0.87
-      - -hits 100  # Note, this is different DL 2020 passage ranking!
+      - -bm25.k1 0.82
+      - -bm25.b 0.68
     results:
       map:
-        - 0.4150
+        - 0.4052
       NDCG@10:
-        - 0.5877
-      RR:
-        - 0.9328
-      R@100:
-        - 0.6231
+        - 0.6482
+      R@1000:
+        - 0.8269
   - name: bm25-tuned+rm3
     display: +RM3
     params:
       - -bm25
-      - -bm25.k1 3.44
-      - -bm25.b 0.87
+      - -bm25.k1 0.82
+      - -bm25.b 0.68
       - -rm3
-      - -hits 100  # Note, this is different DL 2020 passage ranking!
     results:
       map:
-        - 0.4214
+        - 0.4520
       NDCG@10:
-        - 0.5705
-      RR:
-        - 0.8547
-      R@100:
-        - 0.6326
+        - 0.6614
+      R@1000:
+        - 0.8826
