--- a/src/main/resources/regression/dl19-doc-docTTTTTquery-per-doc.yaml
+++ b/src/main/resources/regression/dl19-doc-docTTTTTquery-per-doc.yaml
@@ -1,5 +1,5 @@
 ---
-name: msmarco-doc # Note, this is the name of the collection; this way we can share index with the msmarco regressions
+name: msmarco-doc-docTTTTTquery-per-doc # Note, this is the name of the collection; this way we can share index with the msmarco regressions
 index_command: target/appassembler/bin/IndexCollection
 index_utils_command: target/appassembler/bin/IndexReaderUtils
 search_command: target/appassembler/bin/SearchCollection
@@ -7,7 +7,7 @@ topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 index_root:
 ranking_root:
-collection: CleanTrecCollection
+collection: JsonCollection
 generator: DefaultLuceneDocumentGenerator
 threads: 1
 index_options:
