Improved documentation of MS MARCO passage regressions (#1556)
+ BM25, doc2query, and docTTTTTquery
+ Scores didn't change - just better documentation connecting regressions to official leaderboard submissions.

--- a/src/main/resources/regression/msmarco-passage.yaml
+++ b/src/main/resources/regression/msmarco-passage.yaml
@@ -45,7 +45,7 @@ index_stats:
   documents (non-empty): 8841823
   total terms: 352316036
 topics:
-  - name: "[MS MARCO Passage Ranking: Dev Queries](https://github.com/microsoft/MSMARCO-Passage-Ranking)"
+  - name: "[MS MARCO Passage: Dev](https://github.com/microsoft/MSMARCO-Passage-Ranking)"
     path: topics.msmarco-passage.dev-subset.txt
     qrel: qrels.msmarco-passage.dev-subset.txt
 models:
